Attempt to prevent clipping of records info on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -195,7 +195,7 @@
     .record {
         flex-direction: column;
         width: 330px;
-        height: 370px;
+        height: 390px;
         margin: 0 30px;
         margin-bottom: 30px;
     }
